--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -49,11 +49,12 @@
             app:cardCornerRadius="40dp"
             android:backgroundTint="@color/white">
 
-            <TextView
+            <EditText
+                android:id="@+id/etUsername"
                 android:layout_margin="10dp"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Masukkan username Anda"
+                android:hint="Masukkan username Anda"
                 android:textSize="8pt"
                 android:textColor="@color/light_gray"/>
 
@@ -76,11 +77,12 @@
             app:cardCornerRadius="40dp"
             android:backgroundTint="@color/white">
 
-            <TextView
+            <EditText
+                android:id="@+id/etEmail"
                 android:layout_margin="10dp"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Masukkan email Anda"
+                android:hint="Masukkan email Anda"
                 android:textSize="8pt"
                 android:textColor="@color/light_gray"/>
 
@@ -103,11 +105,12 @@
             app:cardCornerRadius="40dp"
             android:backgroundTint="@color/white">
 
-            <TextView
+            <EditText
+                android:id="@+id/etPassword"
                 android:layout_margin="10dp"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Masukkan password Anda"
+                android:hint="Masukkan password Anda"
                 android:textSize="8pt"
                 android:textColor="@color/light_gray"/>
 
@@ -120,6 +123,7 @@
             android:layout_gravity="center_vertical"
             android:text="Konfirmasi Password"
             android:textSize="12pt"
+            android:inputType="textPassword"
             android:fontFamily="@font/redhatdisplay_regular"
             android:textStyle="bold"
             android:textColor="@color/white"/>
@@ -130,12 +134,14 @@
             app:cardCornerRadius="40dp"
             android:backgroundTint="@color/white">
 
-            <TextView
+            <EditText
+                android:id="@+id/etConfirmPassword"
                 android:layout_margin="10dp"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Masukkan lagi password Anda"
+                android:hint="Masukkan lagi password Anda"
                 android:textSize="8pt"
+                android:inputType="textPassword"
                 android:textColor="@color/light_gray"/>
 
         </androidx.cardview.widget.CardView>
@@ -143,42 +149,45 @@
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/btnRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="32dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@color/pink"
-        app:layout_constraintTop_toBottomOf="@id/inputList"
-        app:layout_constraintStart_toStartOf="parent"
+        app:cardCornerRadius="32dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/inputList">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="REGISTER"
-            android:fontFamily="@font/redhatdisplay_regular"
-            android:textStyle="bold"
-            android:textSize="12pt"
-            android:textColor="@color/white"
             android:layout_marginStart="18dp"
-            android:layout_marginEnd="18dp"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginEnd="18dp"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/redhatdisplay_regular"
+            android:text="REGISTER"
+            android:textColor="@color/white"
+            android:textSize="12pt"
+            android:textStyle="bold" />
 
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sudah punya akun?"
-        android:fontFamily="@font/redhatdisplay_regular"
-        android:textStyle="bold"
-        android:textSize="12pt"
-        android:textColor="@color/white"
         android:layout_margin="32dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/rounded_outline"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:fontFamily="@font/redhatdisplay_regular"
+        android:text="Sudah punya akun?"
+        android:textColor="@color/white"
+        android:textSize="12pt"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
