--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -28,8 +28,8 @@
 
         <ImageView
             android:id="@+id/btnSetting"
-            android:layout_width="42dp"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_baseline_menu_24"
             android:layout_marginRight="16dp"
             app:layout_constraintTop_toTopOf="parent"
